고양이 사진첩 뒤로가기

--- a/고양이사진첩/index.html
+++ b/고양이사진첩/index.html
@@ -39,6 +39,6 @@
         <img src="./assets/sample_image.jpg">
     </div>
     -->
-    <script type="module" src="./App.js"></script>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
